--- a/resources/less/templates/catalog.product.less
+++ b/resources/less/templates/catalog.product.less
@@ -137,14 +137,13 @@
 				text-transform: uppercase;
 			}
 			h2 {
-				font-weight: 400;
 				font-size: 1.3rem;
 				color: #929292;
 			}
 			.info {
 				display: flex;
 				align-items: center;
-				color: #9d9d9d;
+				color: black;
 				margin-top: 20px;
 
 				.in-stock {
@@ -168,14 +167,12 @@
 
 			.parameter-list {
 				margin-top: 20px;
-				max-width: 344px;
 
 				.parameter-item {
 					display: grid;
 					grid-template-columns: repeat(2, 1fr);
 					font-size: 1.1rem;
-					background-color: #fcfcfc;
-					border: 1px solid #ececec;
+					background-color: #f6f6f6;
 					border-radius: 4px;
 					padding: 10px 25px;
 					margin-bottom: 7px;
