--- a/resources/less/sections/welcome.less
+++ b/resources/less/sections/welcome.less
@@ -30,7 +30,8 @@
 					font-size: 12rem;
 					text-transform: uppercase;
 					color: white;
-					font-weight: 400;
+					font-weight: 500;
+					font-family: 'Helvetica';
 				}
 				.btn {
 					background-color: white;
