--- a/resources/less/snippets/catalog.product.sizes.less
+++ b/resources/less/snippets/catalog.product.sizes.less
@@ -1,76 +1,76 @@
 .sizes-wrapper {
-				margin-top: 50px;
+	margin-top: 50px;
 
-				.title {
-					display: flex;
+	.title {
+		display: flex;
 
-					.how-to-choose-size-btn {
-						margin-left: auto;
-						display: flex;
-						background-color: transparent;
-						cursor: pointer;
-						text-decoration: underline;
-						color: #9d9d9d;
+		.how-to-choose-size-btn {
+			margin-left: auto;
+			display: flex;
+			background-color: transparent;
+			cursor: pointer;
+			text-decoration: underline;
+			color: #9d9d9d;
 
-						svg {
-							width: 14px;
-							margin-right: 7px;
-							fill: #9d9d9d;
-						}
-						&:hover {
-							color: black;
+			svg {
+				width: 14px;
+				margin-right: 7px;
+				fill: #9d9d9d;
+			}
+			&:hover {
+				color: black;
 
-							svg {
-								fill: black;
-							}
-						}
-					}
-				}
-				.size-list {
-					margin-top: 5px;
-					display: grid;
-					grid-template-columns: repeat(5, 1fr);
-					grid-gap: 10px;
-					max-width: 430px;
-
-					.size-item {
-						position: relative;
-
-						label {
-							display: block;
-							background-color: white;
-							text-align: center;
-							border: 1px solid #d0d0d0;
-							padding: 12px 0px;
-							cursor: pointer;
-							border-radius: 4px;
-
-							&:hover + .tip {
-								transform: translateY(0);
-								opacity: 1;
-							}
-						}
-
-						input {
-							display: none;
-						}
-						input:checked ~ .tip {
-							opacity: 0 !important;
-							transform: translateY(-5px) !important;
-						}
-						input:checked + label {
-							background-color: #7122e3;
-							border: 1px solid #7122e3;
-							color: white;
-							font-weight: 400;
-						}
-						input:disabled + label {
-							color: gray;
-						}
-						&[instock="1"] label {
-							color: #ff5e00;
-							font-weight: 400;
-						}
-					}
+				svg {
+					fill: black;
 				}
 			}
+		}
+	}
+	.size-list {
+		margin-top: 5px;
+		display: grid;
+		grid-template-columns: repeat(5, 1fr);
+		grid-gap: 10px;
+		max-width: 430px;
+
+		.size-item {
+			position: relative;
+
+			label {
+				display: block;
+				background-color: white;
+				text-align: center;
+				border: 1px solid #e1e1e1;
+				padding: 12px 0px;
+				cursor: pointer;
+				border-radius: 4px;
+
+				&:hover + .tip {
+					transform: translateY(0);
+					opacity: 1;
+				}
+			}
+
+			input {
+				display: none;
+			}
+			input:checked ~ .tip {
+				opacity: 0 !important;
+				transform: translateY(-5px) !important;
+			}
+			input:checked + label {
+				background-color: #7122e3;
+				border: 1px solid #7122e3;
+				color: white;
+				font-weight: 400;
+			}
+			input:disabled + label {
+				color: gray;
+			}
+			&[instock="1"] label {
+				color: #ff5e00;
+				font-weight: 400;
+			}
+		}
+	}
+}
