--- a/resources/less/theme/reset.less
+++ b/resources/less/theme/reset.less
@@ -10,7 +10,7 @@
 	outline: none;
 	font-weight: 300;
 	box-sizing: border-box;
-	font-family: MyriadPro,sans-serif;
+	font-family: MyriadPro, sans-serif;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, .1);
 	-webkit-overflow-scrolling: touch;
 	-webkit-appearance: none;
@@ -40,10 +40,9 @@ body {
 h1 {
 	font-weight: 300;
 	font-size: 2rem;
-	text-align: center;
 }
 main {
-	min-height: 50vh;	
+	min-height: 100vh;
 }
 .container {
 	display: block;
@@ -53,7 +52,8 @@ main {
 	padding: 0 10px;
 
 	&.large {
-		max-width: 1340px;
+		max-width: calc(1400px + 20px);
+		//max-width: 1340px;
 	}
 	&.small {
 		
