--- a/resources/less/theme/reset.less
+++ b/resources/less/theme/reset.less
@@ -52,8 +52,8 @@ main {
 	padding: 0 10px;
 
 	&.large {
-		max-width: calc(1400px + 20px);
-		//max-width: 1340px;
+		//max-width: calc(1400px + 20px);
+		max-width: 1340px;
 	}
 	&.small {
 		
