--- a/resources/less/snippets/header.desktop.less
+++ b/resources/less/snippets/header.desktop.less
@@ -1,5 +1,5 @@
 .desktop {
-	padding: 0 10px;
+	//padding: 0 10px;
 	padding-bottom: 0;
 	width: 100%;
 	position: relative;
@@ -7,8 +7,8 @@
 	.top {
 		display: flex;
 		//justify-content: space-between;
-		max-width: 1400px;
-		margin: 0 auto;
+		//max-width: 1400px;
+		//margin: 0 auto;
 		margin-bottom: 10px;
 		padding-top: 20px;
 		width: 100%;
@@ -95,8 +95,8 @@
 		display: flex;
 		justify-content: space-between;
 		width: 100%;
-		max-width: 1400px;
-		margin: 0 auto;
+		//max-width: 1400px;
+		//margin: 0 auto;
 		position: relative;
 
 		.left {
