Done filters principle. Rewrite price range slider

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -7,7 +7,7 @@
 @import "theme/breadcrumb.less";
 @import "theme/tip.less";
 @import "theme/_has-scroll.less";
-@import "theme/_nouislider.less";
+@import "theme/_range-slider.less";
 
 
 @import "sections/header.less";
