--- a/resources/less/snippets/catalog.collection.product.less
+++ b/resources/less/snippets/catalog.collection.product.less
@@ -1,9 +1,14 @@
 .product-item {
 	transition: all .6s ease-in-out;
+	
+	a {
+		display: block;
+	}
 
 	.picture-wrapper {
 		position: relative;
 		overflow: hidden;
+		border-radius: 4px;
 
 		& > .square:before {
 			padding-top: 75%;
