--- a/resources/less/templates/catalog.collection.less
+++ b/resources/less/templates/catalog.collection.less
@@ -63,6 +63,7 @@
 		grid-template-columns: 250px 1fr;
 		grid-gap: 15px;
 		margin-top: 20px;
+		position: relative;
 
 		.left-side {
 			position: relative;
@@ -78,15 +79,18 @@
 
 			@import "../snippets/catalog.collection.product.less";
 		}
+		.no-products-found {
+			text-align: center;
+			font-size: 1.5rem;
+			color: gray;
+			padding-top: 70px;
+		}
 	}
 
 
 	.product-list-enter, .product-list-leave-to {
 		opacity: 0;
 		transform: translateY(15px);
-	}
-	.product-list-leave-to {
-		transition-delay: none !important;
 	}
 
 	nav {
