Refactoring Vue code. Fix search section

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -20,6 +20,7 @@
 
 @import "templates/home.less";
 @import "templates/brands.less";
+@import "templates/wishlist.less";
 @import "templates/catalog.product.less";
 @import "templates/catalog.collection.less";
 
