--- a/resources/less/snippets/catalog.collection.product.less
+++ b/resources/less/snippets/catalog.collection.product.less
@@ -59,7 +59,7 @@
 				}
 			}
 		}
-		.add-to-wishlist-btn {
+		.add-to-wishlist-btn, .remove-from-wishlist-btn {
 			position: absolute;
 			border-radius: 999px;
 			top: 10px;
@@ -76,6 +76,37 @@
 			svg {
 				fill: @main-color;
 			}
+
+			.tooltip {
+				position: absolute;
+				background-color: white;
+				box-shadow: 0 2px 5px -1px rgba(0, 0, 0, 0.15);
+				color: black;
+				z-index: 2;
+				right: calc(100% + 20px);
+				width: max-content;
+				top: 4px;
+				bottom: 4px;
+				display: flex;
+				align-items: center;
+				padding: 0 15px;
+				border-radius: 4px;
+				opacity: 0;
+				transition: opacity .15s ease-in-out;
+
+				&:after {
+					content: '';
+					display: block;
+					position: absolute;
+					border-top: 6px solid transparent;
+					border-left: 8px solid white;
+					border-bottom: 6px solid transparent;
+					left: 100%;
+				}
+			}
+			&:hover .tooltip {
+				opacity: 1;
+			}
 		}
 	}
 
@@ -89,7 +120,7 @@
 				transform: translateX(0);
 			}
 		}
-		.add-to-wishlist-btn {
+		.add-to-wishlist-btn, .remove-from-wishlist-btn {
 			opacity: 1;
 			transform: translateX(0);
 		}
