--- a/resources/less/templates/catalog.collection.less
+++ b/resources/less/templates/catalog.collection.less
@@ -28,21 +28,34 @@
 				display: flex;
 				align-items: center;
 
-				a {
-					color: #a1a1a1;
-					text-transform: lowercase;
-					padding: 0 8px;
-					height: 30px;
-					display: flex;
-					align-items: center;
-					border-radius: 4px;
+				.form-check {
+					margin: 0;
 					margin-left: 12px;
-
-					&.active {
-						background-color: #878787;
-						color: white;
+					
+					.form-check-body {
+						display: none;
 					}
-				}
+					.form-check-label {
+						padding: 0 8px;
+						height: 30px;
+						display: flex;
+						align-items: center;
+						border-radius: 4px;
+						background-color: transparent;
+				
+						span {
+							color: #a1a1a1;
+							text-transform: lowercase;
+						}
+					}
+					.form-check-input:checked +	.form-check-label {
+						background-color: #878787;
+				
+						span {
+							color: white;
+						}
+					}
+				} 
 			}
 		}
 		
