--- a/resources/less/sections/search.less
+++ b/resources/less/sections/search.less
@@ -13,11 +13,7 @@
 		padding: 12px 0;
 
 		& > .content {
-			margin: auto;
-			width: 100%;
-			max-width: 1400px;
 			display: grid;
-			padding: 0 10px;
 			grid-template-columns: .75fr 1fr;
 			align-items: center;
 
@@ -73,12 +69,8 @@
 	.for-whom {
 		width: 100%;
 
-		& > .content {
-			margin: auto;
-			width: 100%;
-			max-width: 1400px;
+		& > .container {
 			display: flex;
-			padding: 0 10px;
 
 			.item {
 				input { display: none; }
@@ -152,9 +144,6 @@
 		}
 		.results {
 			margin: 25px auto;
-			width: 100%;
-			max-width: 1400px;
-			padding: 0 10px;
 			display: grid;
 			grid-template-columns: 1fr 1fr;
 			column-gap: 40px;
