--- a/resources/less/sections/collections.less
+++ b/resources/less/sections/collections.less
@@ -15,95 +15,78 @@
 		}
 	}
 
-	.link-list {
+	.collection-list {
 		display: grid;
-		grid-template-columns: repeat(6, 1fr);
+		grid-template-columns: repeat(2, 1fr);
 		grid-gap: 20px;
 
-		.link-item {
-			position: relative;
+		.collection-item {
+			background-color: @main-color;
+			border-radius: 12px;
 			overflow: hidden;
+			position: relative;
 
-			.image {
-				background-size: cover;
-				background-position: center;
-				background-repeat: no-repeat;
-				height: 100%;
-				transition: all 0.8s ease;
-
+			&.square {
 				&:before {
-					content: '';
-					position: absolute;
-					.absolutely-covered;
-					background-color: black;
-					opacity: .3;
-					transition: all 0.8s ease;
+					padding-top: 79%;
 				}
 			}
-			a {
-				position: absolute;
+			.inner {
 				.absolutely-covered;
-				display: block;
-				color: white;
-				font-size: 1.9rem;
-				z-index: 2;
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				padding: 0 10px;
-				text-align: center;
+				
+				.image, .overlay {
+					.absolutely-covered;
+					transition: transform .3s ease;
+				}
+				.image {
+					background-repeat: no-repeat;
+					background-position: center;
+					background-size: cover;
+					z-index: 1;
+				}
+				.overlay {
+					background-color: fade(#110038, 30%);
+					z-index: 2;
+				}
+				.bottom {
+					position: absolute;
+					left: 0;
+					right: 0;
+					bottom: 0;
+					z-index: 3;
 
-				@media (max-width: 620px) {
-					font-size: 1.5rem;
-				}
-			}
-			&:hover .image {
-				transform: scale(1.03);
+					.text {
+						color: white;
+						font-weight: 400;
+						font-size: 1.5rem;
+						position: relative;
+						z-index: 2;
+						padding: 22px 28px;
+						display: flex;
+						align-items: center;
 
-				&:before {
-					opacity: .6;
+						svg {
+							margin-left: auto;
+							fill: white;
+							height: 20px;
+						}
+					}
+					.gradient {
+						.absolutely-covered;
+						z-index: 1;
+						background-image: linear-gradient(to bottom, transparent, fade(black, 55%));
+						transition: opacity .3s ease;
+					}
 				}
 			}
-			&:nth-child(1) {
-				grid-column: ~"1 / 4";
-				height: 310px;
-			}
-			&:nth-child(2) {
-				grid-column: ~"4 / 7";
-				height: 310px;
-			}
-			&:nth-child(3) {
-				grid-column: ~"1 / 3";
-				height: 280px;
-			}
-			&:nth-child(4) {
-				grid-column: ~"3 / 5";
-				height: 280px;
-			}
-			&:nth-child(5) {
-				grid-column: ~"5 / 7";
-				height: 280px;
-			}
-			@media (max-width: 850px) {
-				&:nth-child(1) {
-					grid-column: ~"1 / 7";
-					height: 190px;
-				}
-				&:nth-child(2) {
-					grid-column: ~"1 / 4";
-					height: 130px;
-				}
-				&:nth-child(3) {
-					grid-column: ~"4 / 7";
-					height: 130px;
-				}
-				&:nth-child(4) {
-					grid-column: ~"1 / 4";
-					height: 130px;
-				}
-				&:nth-child(5) {
-					grid-column: ~"4 / 7";
-					height: 130px;
+			&:hover {
+				.inner {
+					.image, .overlay {
+						transform: translateY(-71.2px);
+					}
+					.gradient {
+						opacity: 0;
+					}
 				}
 			}
 		}
