--- a/resources/less/sections/collections.less
+++ b/resources/less/sections/collections.less
@@ -2,22 +2,22 @@
 	margin: 80px 0;
 
 	.title {
-		text-align: center;
 		font-size: 1.4em;
 		margin-bottom: 50px;
 
 		hr {
-			margin: 20px auto;
+			margin: 20px 0;
 			border-width: 1px 0 0;
 			width: 50px;
 			height: .5px;
-			background-color: #555555;
+			background-color: black;
+			opacity: .2;
 		}
 	}
 
 	.collection-list {
 		display: grid;
-		grid-template-columns: repeat(2, 1fr);
+		grid-template-columns: repeat(3, 1fr);
 		grid-gap: 20px;
 
 		.collection-item {
