I'm done with fucking filters and sorting

--- a/resources/less/sections/cart.less
+++ b/resources/less/sections/cart.less
@@ -2,7 +2,6 @@
 	.absolutely-covered;
 	position: fixed;
 	z-index: 101;
-	color: white;
 
 	.overlay {
 		.absolutely-covered;
@@ -16,7 +15,7 @@
 		bottom: 0;
 		width: 100%;
 		max-width: 450px;
-		background-color: #161616;
+		background-color: white;
 		padding: 0 30px;
 		transition: transform .35s cubic-bezier(0.46, 0.01 , 0.32, 1);
 
@@ -24,22 +23,29 @@
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
-			padding: 15px 0;
-			border-bottom: 1px solid #343535;
-			height: 80px;
+			padding: 20px 0;
+			border-bottom: 1px solid #ebebeb;
+			position: relative;
 
 			.title {
-				font-size: 1.5rem;
+				color: #4d4d4d;
+				width: 100%;
+				font-size: 1.3rem;
 				letter-spacing: .02rem;
+				text-align: center;
+				font-weight: 500;
 			}
 			.close {
+				position: absolute;
+				right: 0px;
+				top: 16px;
 				cursor: pointer;
 				padding: 10px;
 				margin-right: -10px;
 
 				svg {
 					width: 12px;
-					fill: white;
+					fill: #9d9d9d;
 				}
 			}
 		}
@@ -59,7 +65,7 @@
 				left: 0;
 				right: 0;
 				height: 30px;
-				background: linear-gradient(to bottom, transparent, #161616 100%);
+				//background: linear-gradient(to bottom, transparent, #161616 100%);
 			}
 
 			.product-list-wrapper {
