Make my first package for laravel (XmlParser)

--- a/resources/less/templates/catalog.product.less
+++ b/resources/less/templates/catalog.product.less
@@ -1,4 +1,4 @@
-#template_shop_product {
+#template_catalog_product {
 	& > .top {
 		margin-top: 50px;
 		display: grid;
@@ -7,7 +7,6 @@
 
 		.left {
 			max-width: 709px;
-			width: 100%;
 
 			.sticky {
 				position: sticky;
