--- a/resources/less/sections/footer.less
+++ b/resources/less/sections/footer.less
@@ -1,196 +1,7 @@
 #section_footer {
 	width: 100%;
 	margin-top: 100px;
-	border-top: 1px solid #f6f5f8;
+	border-top: 1px solid #e5e5e5;
 
-	.desktop {
-		.top {
-			display: flex;
-			padding: 65px 10px;
-	
-			.column {
-				.column-title {
-					font-weight: 500;
-					margin-bottom: 10px;
-					text-transform: uppercase;
-				}
-				.link-list {
-					.link-item {
-						margin-top: 8px;
-
-						.link {
-							color: #717171;
-							cursor: pointer;
-
-							&:hover {
-								color: black;
-							}
-						}
-					}
-				}
-				&:not(:first-child) {
-					margin-left: 67px;
-				}
-				&:last-child {
-					margin-left: auto;
-
-					.social-media {
-						display: flex;
-						justify-content: flex-end;
-						margin-top: 30px;
-						margin-right: 6px;
-
-						.social-media-link {
-							&:not(:last-child) {
-								margin-right: 20px;
-							}
-							svg {
-								height: 20px;
-								fill: gray;
-							}
-						}
-					}
-				}
-				.subscribe-mailing-list {
-					position: relative;
-
-					.form-control {
-						width: 345px;
-						border-radius: 99999px;
-						background-color: #efefef;
-						padding: 16px 20px;
-						border: none;
-					}
-					.btn {
-						position: absolute;
-						right: 7px;
-						top: 7px;
-						bottom: 7px;
-						background-color: @main-color;
-						border-radius: 99999px;
-						font-weight: 400;
-						padding: 10px 16px;
-					}
-				}
-			}
-
-			
-		}
-		.bottom {
-			padding: 10px;
-
-			.copyright {
-				text-align: center;
-				color: #979797;
-				font-weight: 400;
-			}
-		}
-	}
+	@import "../snippets/footer.desktop.less";
 }
-
-
-
-/* #section_footer {
-	width: 100%;
-	margin-top: 100px;
-	border-top: 1px solid #f6f5f8;
-
-	.desktop {
-		background-color: white;
-
-		.top {
-			display: flex;
-			padding: 65px 10px;
-
-			.column {
-				.brand-logo {
-					svg {
-						width: 80px;
-						fill: #535353;
-						transition: all .15s ease-in-out;
-					}
-
-					&:hover svg {
-						fill: white;
-						box-shadow: 0 0 10px 0px fade(white, 50%);
-					}
-				}
-				&:not(:last-child) {
-					margin-right: 67px;
-				}
-				.column-title {
-					color: hsla(0,0%,100%,.6);
-					font-size: 1.4rem;
-					margin-bottom: 10px;
-				}
-				.link-item {
-					margin-bottom: 5px;
-
-					a {
-						color: white;
-						cursor: pointer;
-
-						&:hover {
-							opacity: .6;
-						}
-					}
-				}
-				&:last-child {
-					margin-left: auto;
-					
-					.column-title {
-						text-align: right;	
-					}
-					.form-group {
-						.form-control {
-							background:	initial;
-							border-radius: 0;
-							padding: 0;
-							display: flex;
-
-							input {
-								padding: 10px 20px;
-								background-color: #303030;
-								width: 290px;
-								color: white;
-
-								&::placeholder {
-									color: white;
-								}
-							}
-							button {
-								padding: 10px 20px;
-							}
-						}
-					}
-					.social-media {
-						display: flex;
-						justify-content: flex-end;
-						margin-top: 50px;
-
-						li:not(:last-child) {
-							margin-right: 12px;
-						}
-
-						svg {
-							fill: #535353;
-							width: 30px;
-							transition: fill .15s ease-in-out;
-						}
-						a:hover svg {
-							fill: white;
-						}
-					}
-				}
-			}
-		}
-		.bottom {
-			padding: 10px;
-
-			.copyright {
-				text-align: center;
-				color: #979797;
-			}
-		}
-	}
-} */
