Brands section in the home page

--- a/resources/less/templates/catalog.collection.less
+++ b/resources/less/templates/catalog.collection.less
@@ -48,6 +48,9 @@
 							text-transform: lowercase;
 						}
 					}
+					&:hover .form-check-label {
+						background-color: #f5f5f5;
+					}
 					.form-check-input:checked +	.form-check-label {
 						background-color: #878787;
 				
@@ -55,7 +58,7 @@
 							color: white;
 						}
 					}
-				} 
+				}
 			}
 		}
 		
