Section 'new products' on the homepage

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -10,6 +10,8 @@
 @import "theme/_range-slider.less";
 
 
+@import "snippets/catalog.product-item.less";
+
 @import "sections/header.less";
 @import "sections/search.less";
 @import "sections/cart.less";
