--- a/resources/less/sections/home/catalog.less
+++ b/resources/less/sections/home/catalog.less
@@ -1,8 +1,9 @@
 #section_catalog {
+	margin-bottom: 80px;
+	
 	.product-grid {
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
-
-		@import "../../snippets/catalog.collection.product.less";
+		grid-gap: 30px;
 	}
 }
