--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -8,6 +8,7 @@
 @import "theme/tip.less";
 @import "theme/_has-scroll.less";
 @import "theme/_range-slider.less";
+@import "theme/_tabs.less";
 
 
 @import "snippets/catalog.product-item.less";
