--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -12,6 +12,7 @@
 
 
 @import "snippets/catalog.product-item.less";
+@import "snippets/size-chart.less";
 
 @import "sections/header.less";
 @import "sections/search.less";
