Redesign cart section

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -9,6 +9,7 @@
 @import "theme/_has-scroll.less";
 @import "theme/_range-slider.less";
 @import "theme/_tabs.less";
+@import "theme/_select.less";
 
 
 @import "snippets/catalog.product-item.less";
