--- a/resources/less/theme/reset.less
+++ b/resources/less/theme/reset.less
@@ -14,6 +14,7 @@
 	-webkit-tap-highlight-color: rgba(0, 0, 0, .1);
 	-webkit-overflow-scrolling: touch;
 	-webkit-appearance: none;
+	-moz-appearance: none;
 }
 html {
 	font-size: 14px;
