--- a/resources/less/sections/cart.less
+++ b/resources/less/sections/cart.less
@@ -16,7 +16,6 @@
 		background-color: white;
 		transition: transform .35s cubic-bezier(0.46, 0.01 , 0.32, 1);
 		display: grid;
-		grid-gap: 15px;
 		grid-template-rows: auto 1fr auto;
 
 		.top {
@@ -55,9 +54,13 @@
 				}
 			}
 		}
-		& > .content {
+		.middle {
+			overflow-y: scroll;
+
 			.product-list {
-				// @import "../snippets/cart.item.less";
+				padding-bottom: 70px;
+
+				@import "../snippets/cart.item.less";
 
 				.list-complete-enter, .list-complete-leave-to {
 					opacity: 0;
@@ -78,8 +81,10 @@
 				align-items: center;
 				justify-content: center;
 				font-size: 1.4rem;
+				pointer-events: none;
 			}
 		}
+
 		.bottom {
 			.subtotal {
 				display: flex;
