--- a/resources/less/snippets/cart.item.less
+++ b/resources/less/snippets/cart.item.less
@@ -1,18 +1,75 @@
-.product-item {
+.cart-item {
 	display: grid;
-	grid-template-columns: 100px 1fr;
-	grid-gap: 15px;
-	padding: 20px 0;
+	grid-template-columns: .8fr 1fr;
+	grid-gap: 16px;
+	padding: 12px 30px;
 	transition: all .4s ease-in-out;
+
+	&:not(:last-child) {
+		border-bottom: 1px solid #e2e2e2;
+	}
 	//transition: all 40s ease-in-out;
 
-	.left {
-		.product-picture {
-			img {
-				max-width: 100%;
+
+	.product-picture {
+		img {
+			max-width: 100%;
+		}
+	}
+	.product-text-info {
+		font-size: 1.1rem;
+
+		.vendor {
+			font-weight: 500;
+			letter-spacing: .02rem;
+			color: #4e4e4e;
+		}
+		.name {
+			color: #8f8f8f;
+		}
+		.price {
+			font-weight: 500;
+			font-size: 1.33rem;
+			color: #4e4e4e;
+			margin-top: 5px;
+
+			&:after {
+				font-size: .95rem;
+				content: ' руб.';
+			}
+		}
+		.option {
+			color: #8e8e8e;
+		}
+		.row {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+
+			.quantity {
+				margin-top: 5px;
+			}
+		}
+		.delete {
+			width: 30px;
+			height: 30px;
+			background-color: #f4f4f4;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			border-radius: 4px;
+			cursor: pointer;
+			padding: 0;
+
+			svg {
+				width: 40%;
+				fill: #999999;
 			}
 		}
 	}
+
+
+
 	.right {
 		.product-name {
 			font-size: 1.1rem;
@@ -99,8 +156,5 @@
 				}
 			}
 		}
-	}
-	&:not(:first-child) {
-		border-top: 1px solid #343535;
 	}
 }
